--- a/style.css
+++ b/style.css
@@ -279,4 +279,13 @@ section:nth-child(3){
     .navbar-links.active {
         display: flex;
     }
+	section:nth-child(1){
+        justify-content: center;
+        align-items: center;
+        background-color:black;
+        color: rgb(255, 255, 255);
+        font-size:10px;
+        border: 0px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bolder;}
 }
