--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ body {
     position: fixed;
     z-index: 100;
 }
+.navbar-links ul li img{
+    padding:0;
+    margin-top: -6px;
+}
 .hero{
     color: rgb(255, 255, 255);
     background-color: black;
@@ -29,8 +33,8 @@ body {
 }
 
 .brandl{
-   font-size: 1.5rem;
-   margin: o.5rem; 
+    height: 20px;
+    width: 20px;
 }
 .navbar-links ul {
     display: flex;
@@ -149,7 +153,7 @@ section:nth-child(3) button{
     background-color: #000;
     color: #ffffff;
     border-radius: 5px;
-    border: #ffffff 2px;
+    border: #ffffff 1px;
     padding: 4px;
     border-style: solid;
 }
@@ -349,4 +353,12 @@ display: none;} */
             position: fixed;
             z-index: 100;
         } */
+        #preloader{
+            background: #000 url(pl3.gif) no-repeat center center;
+            background-size: 50%;
+            height: 100vh;
+            width: 100%;
+            position: fixed;
+            z-index: 100;
+        }
 }
