--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body {
     width: 100wh;   
     margin:0;
 }
+html,body {
+    margin:0;
+    padding:0;
+    overflow-x:hidden;
+    overflow-y: hidden;
+    }
 *{
     margin: 0;
     padding: 0;
@@ -372,12 +378,14 @@ display: none;} */
             width: 100%;
         }
         .navbar-links ul li{
-            padding: 3px;
-            font-size: 13px;
+            padding: 2px;
+            font-size: 9px;
             margin: -4px;
         }
         .brandl img{
             margin: -17px;
-            padding-left: 20px;
+            padding-left: 18px;
+            height: 50px;
+            width: 45px;
         }
 }
