--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ section:nth-child(2 ){
     font-family: Arial, Helvetica, sans-serif;
 }
 
-section:nth-child(2 ) h1 p{
+section:nth-child(2) h1 p{
     font-size: 20px;
     padding-left: 50px;
     padding-right: 50px;
@@ -364,11 +364,15 @@ display: none;} */
         } */
         #preloader{
             background: #000 url(pl3.gif) no-repeat center center;
-            background-size: 50%;
-            height: 100vh;
-            width: 100vh;
-            position: fixed;
+            background-size: 100%;
+            height: 200px;
+            width: 200px;
+            position: absolute;
+            margin-top: 80%;
+            margin-left: 20%;
             z-index: 100;
+            align-content: center;
+            justify-content: center;
         }
         .container h3{
           font-size: small;
@@ -387,5 +391,8 @@ display: none;} */
             padding-left: 18px;
             height: 50px;
             width: 45px;
+        }
+        .container section:nth-child(2){
+
         }
 }
