--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@ html,body {
     position: fixed;
     z-index: 100;
 }
+#preloader img{
+    display: none;
+}
 .navbar-links ul li img{
     padding:0;
     margin-top: -6px;
@@ -395,5 +398,8 @@ display: none;} */
             padding-top: 80%;
             padding-left:-20%;
         
+        }
+        .section:nth-child(3){
+            overflow: auto;
         }
 }
